Fix formatting bug where labels weren't aligned to radios

--- a/src/components/views/details/content/detailssection.module.scss
+++ b/src/components/views/details/content/detailssection.module.scss
@@ -19,6 +19,10 @@
   }
   input {
     margin-right: 5px;
+    + span {
+      top: -3px;
+      position: relative;
+    }
   }
   &:first-child {
     h2 {
